k8s/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: flask-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: flask-app

          image: miroslavaskl126/flask-app:466223066ad531ce3e94c90875e4f894ffe18049

          imagePullPolicy: Always

          ports:
            - containerPort: 5000
