k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: flask-app-ingress

  annotations:
    external-dns.alpha.kubernetes.io/hostname: app.miroslava.devops12.test-danit.com

spec:
  ingressClassName: nginx

  rules:
    - host: app.miroslava.devops12.test-danit.com

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: flask-app-service

                port:
                  number: 80
                  #check
